src/objects/Opportunity_Tract__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Tract__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Acres__c</fullName>
        <label>Company Acres (Deprecated)</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMV_Per_Acre__c</fullName>
        <label>FMV Per Acre</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>FMV_Per_Acre__c * Tract_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_on_Asset__c</fullName>
        <label>Gain on Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instrument_Type__c</fullName>
        <formula>TEXT(Tract__r.Instrument_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instrument Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes from tract record</description>
        <label>Notes</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OTG_Cost_Per_Acre__c</fullName>
        <description>OTG = &quot;Off the Ground&quot; - how much was paid to the previous owner (does not include commissions, title costs etc.)</description>
        <inlineHelpText>OTG = &quot;Off the Ground&quot; - how much waspaid to the previous owner (does not include commissions, title costs etc.)</inlineHelpText>
        <label>OTG Cost Per Acre</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTG_Cost__c</fullName>
        <description>Cost per acre copied from tract for roll up calculations</description>
        <label>OTG Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Tracts</relationshipLabel>
        <relationshipName>Opportunity_Tracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rollup_Exception__c</fullName>
        <formula>Tract_Acres__c != Tract__r.netAcres__c || 
OTG_Cost_Per_Acre__c != Tract__r.OTG_Cost_Per_Acre__c ||
FMV_Per_Acre__c != Tract__r.Value_Per_Acre__c ||
ROUND(Total_Cost__c,2) != ROUND(Tract__r.Total_Cost__c,2) ||
ROUND(Total_Cost_Per_Acre__c,2) != ROUND(Tract__r.Total_Cost_Per_Acre__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rollup Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Per_Acre__c</fullName>
        <label>Total Cost Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Copied from Tract used for roll up calculations</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tract_Acres__c</fullName>
        <label>Tract Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tract_Full_Legal_Name__c</fullName>
        <description>Show the full legal description on the Tract</description>
        <formula>Tract__r.Full_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show the full legal description on the Tract</inlineHelpText>
        <label>Tract Full Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract_Name__c</fullName>
        <formula>Tract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tract</label>
        <referenceTo>Tract__c</referenceTo>
        <relationshipLabel>Opportunity Tracts</relationshipLabel>
        <relationshipName>Opportunity_Tracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>askTotalPrice__c</fullName>
        <formula>askUnitPrice__c *  Tract_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ask Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>askUnitPrice__c</fullName>
        <label>Ask Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalPrice__c</fullName>
        <formula>unitPrice__c *  Tract_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier created based on concatenation of Opportunity ID and Tract ID</description>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>unitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Tract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OT-{0000000000}</displayFormat>
        <label>Opportunity Tract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Tracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>